--- a/src/blocks/Components/experienceCard/ExpCard.module.css
+++ b/src/blocks/Components/experienceCard/ExpCard.module.css
@@ -59,29 +59,11 @@
 
 @keyframes keyframes-intro {
   100% {
-    ransform: translate(-100%);
+    transform: translate(-100%);
     opacity: 0;
   }
 }
 
-.card .image {
-  width: 200px;
-  animation: keyframes-floating-img 10s ease-in-out infinite;
-}
-
-@keyframes keyframes-floating-img {
-  0% {
-    transform: translate(-2%, 2%) scaleY(0.95) rotate(-5deg);
-  }
-
-  50% {
-    transform: translate(2%, -2%) scaleY(1) rotate(5deg);
-  }
-
-  100% {
-    transform: translate(-2%, 2%) scaleY(0.95) rotate(-5deg);
-  }
-}
 
 .card .heading {
   font-weight: 600;
@@ -97,25 +79,4 @@
   50% {
     opacity: 0.5;
   }
-}
-
-.card .icons {
-  display: flex;
-  gap: var(--unit);
-}
-
-.card .icons a {
-  display: flex;
-  flex-grow: 1;
-  align-items: center;
-  justify-content: center;
-  background-color: var(--dark);
-  color: var(--lightgray);
-  padding: calc(var(--unit) / 2);
-  border-radius: calc(var(--unit) / 2);
-}
-
-.card .icons a:hover {
-  transition: 0.2s;
-  background-color: var(--semidark);
 }
