--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,52 @@ body {
   .card p {
     @apply text-white text-xl font-semibold
   }
+   .btn-85 {
+    @apply bg-[#111] border-none outline-none select-none cursor-pointer;
+
+    /* For Safari */
+    -webkit-user-select: none;
+    touch-action: manipulation;
+  }
+
+  .btn-85::before {
+    content: "";
+    position: absolute;
+    top: -5px;
+    left: -5px;
+    width: calc(100% + 8px);
+    height: calc(100% + 8px);
+    z-index: -1;
+    border-radius: 10px;
+    background: linear-gradient(
+      45deg,
+      #ff0000,
+      #ff7300,
+      #fffb00,
+      #48ff00,
+      #00ffd5,
+      #002bff,
+      #7a00ff,
+      #ff00c8,
+      #ff0000
+    );
+    background-size: 400%;
+    filter: blur(7px);
+    animation: glowing-85 20s linear infinite;
+    transition: opacity 0.3s ease-in-out;
+  }
+
+  .btn-85::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    border-radius: 10px;
+    background: #222;
+  }
 }
 .triangle-bg {
   background: black;
@@ -48,3 +94,14 @@ body {
   width: 0;
 }
 
+@keyframes glowing-85 {
+  0% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: 400% 0;
+  }
+  100% {
+    background-position: 0 0;
+  }
+}
