--- a/src/blocks/Components/QuickAccess/QuickAccess.module.css
+++ b/src/blocks/Components/QuickAccess/QuickAccess.module.css
@@ -1,6 +1,7 @@
 /* From Uiverse.io by MijailVillegas */ 
 .card {
   max-width: fit-content;
+  max-height: 400px;
   border-radius: 15px;
   display: flex;
   flex-direction: column;
